--- a/style.css
+++ b/style.css
@@ -8,12 +8,19 @@
 body{
     border-radius: 20px 20px 0px 0px;
     font-family: 'Montserrat', sans-serif;
-    background-color: hsl(0, 0%, 100%);
+    background-color: hsl(30, 38%, 92%);
 }
 
 .image-init{
     width: 100%;
     height: 100%;
+}
+
+.card{
+    background-color: hsl(0, 0%, 100%);
+    padding-bottom: 20px;
+    /* top-left | top-right | bottom-right | bottom-left */
+    border-radius: 10px 10px 0 0;
 }
 
 
@@ -24,6 +31,8 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    /* top-left | top-right | bottom-right | bottom-left */
+    border-radius: 10px 10px 0 0;
 }
 
 .contenedor{
@@ -94,3 +103,45 @@ body{
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+
+/*-------------------440px-------------------*/
+
+@media only screen and (min-width: 1430px){
+
+    img{
+        content: url(images/image-product-desktop.jpg);
+    }
+
+    .card{
+        width: 700px;
+        height: 450px;
+        display: flex;
+        margin: 175px auto 75px;
+    }
+
+    .contenedor{
+        width: 600px;
+        height: 450px;
+    }
+    .container img{
+        width: 300px;
+        height: 100%;
+        align-items: center;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        /* top-left | top-right | bottom-right | bottom-left */
+        border-radius: 10px 0 0 10px;
+    }
+
+    .card{
+        background-color: hsl(0, 0%, 100%);
+        /* top-left | top-right | bottom-right | bottom-left */
+        border-radius: 10px 10px 0 0;
+        padding-bottom: 0px;
+    }
+    
+
+}
+
